<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/search_layout"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/button_curve"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
    >
        <ImageView android:layout_width="20dp"
                   android:layout_marginStart="8dp"
                   android:layout_height="20dp"
                   android:src="@drawable/ic_search_black_24dp"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center|start"
                  style="@style/LabelTitle"
                  android:layout_marginStart="16dp"
                  android:text="@string/search"
                  android:id="@+id/textView"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/tab"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:weightSum="2"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/search_layout">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/title_business"
                  android:textAllCaps="true"
                  android:layout_weight="1"
                  android:id="@+id/business"
                  android:padding="4dp"
                  android:gravity="center"
                  style="@style/LabelTitle"
                  android:background="@drawable/button_curve"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/title_games"
                  android:id="@+id/games"
                  android:layout_weight="1"
                  android:textAllCaps="true"
                  android:padding="4dp"
                  style="@style/LabelTitle"
                  android:gravity="center"
                  android:background="@drawable/button_curve_trans"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>