<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">


    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/big_pro_image_size"
            android:layout_height="@dimen/big_pro_image_size"
            android:id="@+id/disc_popular_image"
            android:src="@drawable/sunnat"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/disc_popular_fullName"
            app:layout_constraintStart_toEndOf="@+id/disc_popular_image"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/disc_popular_repliesTime" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>

    <ImageView android:layout_width="12dp"
               android:layout_height="11dp"
               android:id="@+id/disc_popular_flash"
               android:src="@drawable/ic_flash_on_black_24dp"
               app:layout_constraintTop_toTopOf="@+id/disc_popular_repliesTime"
               app:layout_constraintBottom_toBottomOf="@+id/disc_popular_repliesTime"
               app:layout_constraintStart_toStartOf="@+id/disc_popular_fullName"
    />
    <TextView
            android:text="@string/replies_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/disc_popular_repliesTime"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="20"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/disc_popular_image"
            app:layout_constraintTop_toTopOf="@+id/disc_popular_image" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/disc_popular_flash"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:id="@+id/disc_popular_description"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="20"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/disc_popular_repliesTime"
            app:layout_constraintVertical_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/disc_popular_fullName"/>


</android.support.constraint.ConstraintLayout>