<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.constraint.ConstraintLayout
            android:id="@+id/imageRoot"
            android:layout_width="65dp"
            android:layout_height="65dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/imageView"
                android:src="@drawable/sunnat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"/>

        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="15dp" android:layout_height="15dp"
                app:civ_border_width="2dp"
                android:id="@+id/online"
                app:civ_border_color="@android:color/white"
                android:src="@android:color/holo_green_light" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
            android:text="@string/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fullName"
            app:layout_constraintStart_toEndOf="@+id/imageRoot"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/dateTime"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="@+id/imageRoot"
            app:layout_constraintTop_toTopOf="@+id/imageRoot" app:layout_constraintVertical_bias="0.26"/>
    <TextView
            android:text="@string/last_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastMsg"
            android:textSize="14sp"
            android:ellipsize="end"
            android:maxEms="8"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/fullName" app:layout_constraintStart_toStartOf="@+id/fullName"
            app:layout_constraintEnd_toStartOf="@+id/dateTime" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="@+id/imageRoot"
            app:layout_constraintVertical_bias="0.26"/>

    <TextView
            android:text="@string/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateTime"
            android:textSize="12sp"

            android:ellipsize="end"
            android:maxEms="8"
            android:maxLines="1" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fullName"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:id="@+id/mute"
            android:layout_width="24dp" android:layout_height="24dp"
               android:src="@drawable/ic_volume_off_black_24dp" app:layout_constraintTop_toBottomOf="@+id/dateTime"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="4dp"
               app:layout_constraintStart_toEndOf="@+id/lastMsg" android:layout_marginStart="8dp"
               app:layout_constraintHorizontal_bias="1.0"/>


</android.support.constraint.ConstraintLayout>