<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        xmlns:tools="http://schemas.android.com/tools"
        android:overScrollMode="never"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
         >

        <include layout="@layout/discover_fragment"
                 android:id="@+id/discover_fragment_layout"
                 app:layout_constraintTop_toTopOf="parent"/>

        <!--Discover Recent-->
        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:id="@+id/constraint_recent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discover_fragment_layout">
            <TextView
                    android:id="@+id/recent_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    tools:layout_constraintLeft_creator="1"
                    android:text="@string/title_recent"
                    android:layout_marginStart="8dp"
                    style="@style/LabelTitle"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/watch_recent" app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                    android:id="@+id/watch_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_see_more"
                    style="@style/LabelTitle"
                    android:textStyle="normal"
                    android:textSize="12sp"
                    tools:layout_constraintTop_creator="1"
                    tools:layout_constraintLeft_creator="1"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/recent_label"
                    app:layout_constraintTop_toTopOf="@+id/recent_label"/>


            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:id="@+id/disc_recent_list"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/watch_recent"/>

        </android.support.constraint.ConstraintLayout>

        <!--Discover Featured-->
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/constraint_featured"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/constraint_recent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            <TextView
                    android:id="@+id/featured_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    tools:layout_constraintLeft_creator="1"
                    style="@style/LabelTitle"
                    android:text="@string/title_featured"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/watch_featured"
                    app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                    android:id="@+id/watch_featured"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_see_more"
                    style="@style/LabelTitle" tools:layout_constraintTop_creator="1"
                    android:textStyle="normal"
                    android:textSize="12sp"
                    tools:layout_constraintLeft_creator="1"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/featured_label"
                    app:layout_constraintBottom_toBottomOf="@+id/featured_label"/>


            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/disc_featured_list"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/watch_featured"/>

        </android.support.constraint.ConstraintLayout>

        <!--Discover Popular-->
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/constraint_popular"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/constraint_featured"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            <TextView
                    android:id="@+id/popular_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    tools:layout_constraintLeft_creator="1"
                    android:text="@string/title_popular"
                    style="@style/LabelTitle"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.0"/>


            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/disc_popular_list"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/popular_label"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>